testdata/some/file_10.sg
import foo::Bar;
import error::{Error, +}; // error: unexpected token '+'
